--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ] }, "HTML-CSS": { webFont: "STIX-Web", minScaleAdjust: 130, matchFontHeight: true, linebreaks: { automatic: true } } , "fast-preview": { disabled: true }}); MathJax.Hub.Register.StartupHook("End Jax",function () { var jax = "HTML-CSS"; return MathJax.Hub.setRenderer(jax); });
+    </script>
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_HTMLorMML&locale=vi"></script>
 </head>
 
 <body>
