--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Ngân hàng câu hỏi - Ứng dụng tạo câu hỏi</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-red.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+    <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-red.min.css"> -->
+    <!--  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--  <script defer src="https://code.getmdl.io/1.0.0/material.min.js"></script> -->
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ] }, "HTML-CSS": { webFont: "STIX-Web", minScaleAdjust: 130, matchFontHeight: true, linebreaks: { automatic: true } } , "fast-preview": { disabled: true }}); MathJax.Hub.Register.StartupHook("End Jax",function () { var jax = "HTML-CSS"; return MathJax.Hub.setRenderer(jax); });
     </script>
