--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Ngân hàng câu hỏi - Ứng dụng tạo câu hỏi</title>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa&amp;subset=vietnamese" rel="stylesheet">
-    <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-    <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-red.min.css"> -->
-    <!--  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!--  <script defer src="https://code.getmdl.io/1.0.0/material.min.js"></script> -->
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ] }, "HTML-CSS": { webFont: "STIX-Web", minScaleAdjust: 130, matchFontHeight: true, linebreaks: { automatic: true } } , "fast-preview": { disabled: true }}); MathJax.Hub.Register.StartupHook("End Jax",function () { var jax = "HTML-CSS"; return MathJax.Hub.setRenderer(jax); });
-    </script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_HTMLorMML&locale=vi"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <title>Ngân hàng câu hỏi - Ứng dụng tạo câu hỏi</title>
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa&amp;subset=vietnamese" rel="stylesheet">
+  <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+  <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-red.min.css"> -->
+  <!--  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <!--    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+  <!--  <script defer src="https://code.getmdl.io/1.0.0/material.min.js"></script> -->
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ] }, "HTML-CSS": { webFont: "STIX-Web", minScaleAdjust: 130, matchFontHeight: true, linebreaks: { automatic: true } } , "fast-preview": { disabled: true }});
+  </script>
+  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_HTMLorMML&locale=vi"></script>
 </head>
 
 <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 </body>
 
 </html>
