--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Ngân hàng câu hỏi - Ứng dụng tạo câu hỏi</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!--  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-red.min.css"> -->
     <!--  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css"> -->
